--- a/gb/20/5/19/n12121024.md
+++ b/gb/20/5/19/n12121024.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yirpaj3429/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>高科技研发等4中心 沈荣津：台经济重要基石</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/05/d0c0870a1f90985341892541f158f10c-600x400.jpg" />
 <h6>经济部部长沈荣津19日指出，政府正与Amazon、Google等国际大厂，洽商在台投资设立高科技研发中心的投资计划。（中央社）
 </h6>
 <hr>
-<p>【大纪元2020年05月19日讯】（大纪元记者徐翠玲<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>台北报导）<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E.md#1">经济</a>部部长<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E6%B2%88%E8%8D%A3%E6%B4%A5.md#1">沈荣津</a>19日指出，政府正与Amazon、Google等国际大厂，洽商在台投资设立高科技研发中心的投资计划。展望未来，在美中贸易战契机下，高科技研发中心、高阶制造中心、半导体先进制程中心，以及绿能研发中心等4大中心，将是未来2、30年<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>产业与<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E.md#1">经济</a>发展的重要基石。</p>
-<p><ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E6%B2%88%E8%8D%A3%E6%B4%A5.md#1">沈荣津</a>到高雄加工区，主持“前瞻智造中心－投资意向书签署仪式暨联合办公大楼上梁典礼”时说，台湾因超前部属，将新冠肺炎（中共肺炎）疫情冲击降到最低，加上经济部启动投资台湾三大计划，促使台商扩大回台投资，目前累积投资额已破兆元，创造超过8万3,000就业机会。</p>
-<p>沈荣津表示，在美中贸易摩擦之后，台湾将高阶制造中心移回<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>，当初广达高阶服务器要移回台湾，遭质疑怎么可能？结果原本约需用30到40人的高阶服务器生产线，在台湾只要6个人，利用机器手臂做线上瑕疵即时检测，生产良率也从95％提升到99％，国际都讶异于台湾的竞争力。</p>
+<p>【大纪元2020年05月19日讯】（大纪元记者徐翠玲<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>台北报导）<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E.md#1">经济</a>部部长<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B2%88%E8%8D%A3%E6%B4%A5.md#1">沈荣津</a>19日指出，政府正与Amazon、Google等国际大厂，洽商在台投资设立高科技研发中心的投资计划。展望未来，在美中贸易战契机下，高科技研发中心、高阶制造中心、半导体先进制程中心，以及绿能研发中心等4大中心，将是未来2、30年<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>产业与<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E.md#1">经济</a>发展的重要基石。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B2%88%E8%8D%A3%E6%B4%A5.md#1">沈荣津</a>到高雄加工区，主持“前瞻智造中心－投资意向书签署仪式暨联合办公大楼上梁典礼”时说，台湾因超前部属，将新冠肺炎（中共肺炎）疫情冲击降到最低，加上经济部启动投资台湾三大计划，促使台商扩大回台投资，目前累积投资额已破兆元，创造超过8万3,000就业机会。</p>
+<p>沈荣津表示，在美中贸易摩擦之后，台湾将高阶制造中心移回<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>，当初广达高阶服务器要移回台湾，遭质疑怎么可能？结果原本约需用30到40人的高阶服务器生产线，在台湾只要6个人，利用机器手臂做线上瑕疵即时检测，生产良率也从95％提升到99％，国际都讶异于台湾的竞争力。</p>
 <p>沈荣津说，服务器与资安有关系，也与信任有关系。尤其在新冠肺炎（中共肺炎）疫情之后，大家对台湾产品的信任更高，“我们要珍惜MIT品牌。”至于台湾未来半导体的先进制程制造中心，将投资2兆7千多亿。</p>
 <p>经济部斥资新台币24亿元前瞻计划特别预算，推动“高雄加工出口区智造新基地”，更新高雄加工区4.17公顷老旧厂房，兴建2栋标准厂房，未来整个园区落成后将只租不售，预计可增加118亿元产值及3,000个就业机会。</p>
 <p>责任编辑：王愉悦</p>
@@ -17,41 +17,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/5/15/n12111788.md#1">台积电赴美设厂 蓬佩奥：来的正是时候</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/5/15/n12112800.md#1">疫情令大陆中小企雪上加霜 至少减收70%</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/5/15/n12112963.md#1">台积电赴美建芯片厂 中美角力掀巨浪</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/5/17/n12115419.md#1">各国企业与中国分手  专家：中国市场剩空壳</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/5/17/n12116118.md#1">美中对抗升温 台立委：难再两边压宝</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/5/18/n12118411.md#1">传台积电不接华为单 学者：美贸战阶段胜利</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/5/18/n12118466.md#1">台积电赴美人才流失？ 经部：在台续增员工</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/22/3/2/n13616562.md#1">台毕业生最向往：台积电、国泰金、长荣</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/22/3/2/n13616531.md#1">因应减碳潮流 台工业局推动中小企业辅导</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/22/3/2/n13616540.md#1">中小企业喊买不到绿电 台经部：将简化程序</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/5/15/n12111788.md#1">台积电赴美设厂 蓬佩奥：来的正是时候</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/5/15/n12112800.md#1">疫情令大陆中小企雪上加霜 至少减收70%</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/5/15/n12112963.md#1">台积电赴美建芯片厂 中美角力掀巨浪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/5/17/n12115419.md#1">各国企业与中国分手  专家：中国市场剩空壳</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/5/17/n12116118.md#1">美中对抗升温 台立委：难再两边压宝</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/5/18/n12118411.md#1">传台积电不接华为单 学者：美贸战阶段胜利</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/5/18/n12118466.md#1">台积电赴美人才流失？ 经部：在台续增员工</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680888.md#1">遭点名没撤俄 华硕董座施崇棠重申：已停止出货</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680895.md#1">数位化趋势 科技、供应链人才需求夯</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13681006.md#1">电价涨不涨？台经济部：俄乌战争情势明朗再议</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/3/n10112268.md#1" target="_blank">林辉：红色公主的大字报让军报少将家破人亡</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/6/n9230640.md#1" target="_blank">对中国法轮功学员被迫害的调查 (2)</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/31/n10265684.md#1" target="_blank">共产暴政录：中共为什么要败坏中国人的道德</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11238180.md#1" target="_blank">感恩法轮功师父 教我做个善良人</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/20/n11959110.md#1">【新闻看点】“抗疫胜利”炒过头 中共出手抓人</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/20/n11959398.md#1">【疫情最前线】意大利：中国没送任何东西！</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/20/n11957882.md#1">李文亮一女同事病逝 其夫涉嫌活摘器官</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/20/n11958206.md#1">TWICE周子瑜首本个人照片书 4月27日发行</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/19/n11955332.md#1">澳洲性侵案7罪名缠2年 男星高云翔获判无罪</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/13/n11937754.md#1">他们为官怎能让老虎自动离界不扰人？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/5/19/n12121024.htm">高科技研发等4中心 沈荣津：台经济重要基石</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/5/19/n12121024.htm">高科技研发等4中心 沈荣津：台经济重要基石</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yirpaj3429/djy/blob/master/gb/20/5/19/n12121024.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/5/19/n12121024.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
